--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main  # Remplace 'main' par la branche sur laquelle tu veux exécuter le workflow
 
+permissions:
+  contents: write 
+
 jobs:
   update-sitemap:
     runs-on: ubuntu-latest
@@ -32,6 +35,6 @@ jobs:
           git commit -m "Update sitemap.xml with current date" || echo "No changes to commit"
 
       - name: Push changes
-        run: git push
+        run: git push https://github.com/QuD75/qud75.github.io.git main
         env:
           GITHUB_TOKEN: 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  # Utilise le token GitHub pour autoriser le push
