--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,15 @@
-name: Deploy GitHub Pages with API key
+name: Deploy on main branch
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Generate config.js with secret
         run: |
@@ -18,9 +17,12 @@ jobs:
           echo "  STATION_API_KEY: '${{ secrets.STATION_API_KEY }}'" >> config.js
           echo "};" >> config.js
 
-      - name: Build and deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./          # dossier à publier (ici racine)
-          publish_branch: main     # déploiement sur main au lieu de gh-pages
+      - name: Commit and push changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add config.js
+          git commit -m "Update config.js with secret"
+          git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
