--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,35 @@
-name: Deploy on main branch
+name: Déploiement sécurisé de config.js
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
 
-      - name: Generate config.js with secret
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Générer config.js avec secret
         run: |
           echo "const CONFIG = {" > config.js
           echo "  STATION_API_KEY: '${{ secrets.STATION_API_KEY }}'" >> config.js
           echo "};" >> config.js
 
-      - name: Commit and push changes
+      - name: Copier config.js dans le dossier public
+        run: mv config.js public/config.js  # ou "./" selon ta structure
+
+      - name: Configurer Git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add config.js
-          git commit -m "Update config.js with secret"
-          git push origin main
+
+      - name: Ajouter, committer et pousser (sans config.js dans Git)
+        run: |
+          git add -A
+          git commit -m "Déploiement site (sans config.js)"
+          git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
