--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,9 @@ jobs:
       env:
         STATION_API_KEY: ${{ secrets.STATION_API_KEY }}
       run: |
-        echo "export const apiKey = '${STATION_API_KEY}';" > js/config.js
-        # Ici tu peux lancer ta build, par exemple avec npm run build
-        # npm run build
+        echo "export const apiKey = \"${STATION_API_KEY}\";" > js/config.js
+        ls -l js/
+        cat js/config.js
 
-    # Tu peux ajouter une étape pour déployer ou copier les fichiers construits
+        npm install
+        npm run build
