--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,4 @@ jobs:
         echo "export const apiKey = \"${STATION_API_KEY}\";" > js/config.js
         ls -l js/
         cat js/config.js
+        cp js/config.js js/config.js
